优化 UI 组件，调整滑块宽度和间距，改进鼠标事件处理逻辑